# wd-hydrus-tagger

./: .coverage  .gitignore  CLAUDE.md  README.md  README.zh-TW.md  commit.sh  config.example.yaml  config.yaml.bak  pyproject.toml  requirements.txt  run.py  wd-hydrus-tagger.sh  啟動.bat
backend/: app.py  config.py  dependencies.py  listen_hints.py  log_parsing.py  log_report.py  log_stats.py  logging_setup.py  perf_metrics.py  runtime_linux.py  shutdown_coordination.py
backend/hydrus/: client.py  metadata_maps.py  models.py  tag_merge.py  transport_errors.py
backend/routes/: app_control.py  config_routes.py  connection.py  files.py  tagger.py  tagger_apply.py  tagger_http.py  tagger_ws.py  tagger_ws_transport.py
backend/services/: learning_calibration.py  model_manager.py  performance_results_store.py  session_autotune.py  tagging_queue_analysis.py  tagging_service.py  tagging_session_registry.py  tagging_shared.py  tuning_observability.py
backend/tagger/: engine.py  labels.py  models.py  preprocess.py
docs/: DEPENDENCIES.md  PERFORMANCE_AND_TUNING.md  TESTING.md  TUNING_MODE_UPGRADE_PLAN.md  UPGRADE.md  UPGRADE_V2.md  Viewer.md  architecture.md  health.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  config_mapper.js  layout.js  server_offline.js  state.js
frontend/js/components/: connection.js  gallery.js  gallery_selection_toast.js  progress.js  settings.js  tagger.js  tagger_progress.js  viewer.js
frontend/js/utils/: dom.js  hydrus.js  selection_nav.js
models/: README.md
reports/: README.md
scripts/: analyze_tagging_log.py  check_critical_coverage.py  check_requirements.py  generate_config.py  summarize_latest_log.py
tests/: conftest.py  test_analyze_tagging_log_script.py  test_app_control.py  test_apply_tags_route.py  test_check_requirements_script.py  test_config.py  test_config_route.py  test_connection_route.py  test_dependencies.py  test_files_metadata_chunk.py  test_files_routes_more.py  test_frontend_english.py  test_gallery_viewer_frontend.py  test_generate_config_script.py  test_hydrus_client.py  test_hydrus_transport_errors.py  test_learning_calibration.py  test_learning_calibration_bytes.py  test_listen_hints.py  test_log_report.py  test_log_stats.py  test_logging_setup.py  test_metadata_maps.py  test_model_manager.py  test_perf_metrics.py  test_performance_results_store.py  test_predict_route.py  test_preprocess.py  test_pydantic_hydrus_tagger_models.py  test_runtime_linux.py  test_runtime_linux_loop.py  test_selection_nav_frontend.py  test_session_autotune.py  test_shutdown_coordination.py  test_tag_merge.py  test_tagger_apply_chunk.py  test_tagger_engine_predict.py  test_tagger_engine_profiling.py  test_tagger_models_verify.py  test_tagger_trim_results.py  (+13 more)
