[project]
name = "wd-hydrus-tagger"
version = "0.1.0"
description = "WD14 Tagger integration for Hydrus Network via Web UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "onnxruntime>=1.18",
    "Pillow>=10.0",
    "numpy>=1.26",
    "huggingface-hub>=0.23",
    "websockets>=12.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.18"]

[project.scripts]
wd-hydrus-tagger = "backend.app:main"
