[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project]
name = "wd-hydrus-tagger"
version = "0.1.0"
description = "WD14 Tagger integration for Hydrus Network via Web UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0.1",
    "httpx>=0.28",
    "onnxruntime>=1.20",
    "Pillow>=10.4",
    "numpy>=1.26",
    "huggingface-hub>=0.26",
    "websockets>=13.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.20"]
# Linux: faster asyncio event loop for Hydrus I/O + WebSockets (no effect on Windows/macOS).
perf = ["uvloop>=0.21; sys_platform == 'linux'"]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--cov=backend",
    "--cov-report=term-missing:skip-covered",
]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
precision = 1
skip_empty = true
# Total line+branch coverage for ``backend`` (``pytest`` with dev extras).
fail_under = 62

[project.scripts]
wd-hydrus-tagger = "backend.app:main"
